--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,13 @@ readme = "README.md"
 python = "3.11.7"
 pytube = "^15.0.0"
 moviepy = "^1.0.3"
+customtkinter = "^5.2.2"
+srt = "^3.5.3"
+whisper = "^1.1.10"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.0"
 
 [build-system]
 requires = ["poetry-core"]
